--- a/fooldal/index.html
+++ b/fooldal/index.html
@@ -10,7 +10,9 @@
 <body>
     <main>
         <header></header>
-        <nav></nav>
+        <nav>
+            <div></div>
+        </nav>
         <article></article>
         <aside></aside>
         <footer></footer>
