--- a/fooldal/index.html
+++ b/fooldal/index.html
@@ -11,7 +11,7 @@
     <main>
         <header></header>
         <nav>
-            <div></div>
+            <div>valami</div>
         </nav>
         <article></article>
         <aside></aside>
