--- a/jatekok/jatekok.html
+++ b/jatekok/jatekok.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peti</title>
+    <script src="jscript.js"></script>
+    <link rel="stylesheet" href="stilus.css">
 </head>
 <body>
     játékok
