--- a/tesztkerdesek/tesztkerdesek.html
+++ b/tesztkerdesek/tesztkerdesek.html
@@ -11,7 +11,7 @@
 <body>
 <div class="altsuli"></div>
 <div class="kozsuli"></div>
-<div class="felsuli"></div>
+<div class="felnot"></div>
 </body>
 
 </html>
