--- a/jatekok/jatekok.html
+++ b/jatekok/jatekok.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stilus.css">
 </head>
 <body>
+    <img src="../kepek/jatekok/kep0.jpg" alt="">
     játékok
     adadnadad
     bdbasod
