memóriajáték: a játék működik, reset gomb hiányzik

--- a/jatekok/jatekok.html
+++ b/jatekok/jatekok.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="stilus.css">
 </head>
 <body>
-    <img src="../kepek/jatekok/kep0.jpg" alt="">
-    játékok
-    adadnadad
-    bdbasod
+    <div class="fotarolo">
 
-    dasdadasd
+    </div>
+   
+    <!-- <div>
+        <div class="mezo" id="${index}"><img src="../kepek/jatekok/hatter.jpg" alt="${index}"></div>
+    </div> -->
 </body>
 </html>
