Memóriajáték: lehet új játékot kezdeni

--- a/jatekok/jatekok.html
+++ b/jatekok/jatekok.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,34 @@
     <script src="jscript.js"></script>
     <link rel="stylesheet" href="stilus.css">
 </head>
-<body>
-    <div class="fotarolo">
 
-    </div>
-   
-    <!-- <div>
-        <div class="mezo" id="${index}"><img src="../kepek/jatekok/hatter.jpg" alt="${index}"></div>
-    </div> -->
+<body>
+    <section id="jatekok">
+        <div class="fotarolo">
+
+        </div>
+
+        <!-- <div>
+            <div class="mezo" id="${index}"><img src="../kepek/jatekok/hatter.jpg" alt="${index}"></div>
+        </div> -->
+        <div id="gyozelem">
+            <h1>Gratulálok! Megtaláltad mindet!</h1>
+            <div class="gombTarolo">
+                <div class="gomb" id="ujjatek">
+                    <p>Új játék</p>
+                </div>
+                <div class="gomb">
+                    <p>Vissza a főoldalra</p>
+                </div>
+            </div>
+        </div>
+        <div id="ujJatekGomb">
+            <div class="gomb2" id="ujjatek">
+                <p>Új játék</p>
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
