--- a/tesztkerdesek/tesztkerdesek.html
+++ b/tesztkerdesek/tesztkerdesek.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <script src="teszt.js"></script>
+    <title>Teszt Kerdesek</title>
 </head>
 
 <body>
-<div class="altsuli"></div>
-<div class="kozsuli"></div>
-<div class="felnot"></div>
+    <section id="tesztes"></section>
 </body>
 
 </html>
