--- a/tesztkerdesek/tesztkerdesek.html
+++ b/tesztkerdesek/tesztkerdesek.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-    <section id="tesztes"></section>
+    <div id="valasztas"> 
+        <button id="altsuli" >Általános suli</button>
+        <button id="kozsuli">Közép suli</button>
+        <button id="felnot" >Felnőtteknek</button>
+    </div>
+    <section id="tesztes">
+    </section>
 </body>
 
 </html>
