új képek beillesztve + shrek

--- a/jatekok/jatekok.html
+++ b/jatekok/jatekok.html
@@ -24,9 +24,12 @@
                 <div class="gomb" id="ujjatek">
                     <p>Új játék</p>
                 </div>
-                <div class="gomb">
-                    <p>Vissza a főoldalra</p>
-                </div>
+                <a href="../fooldal/index.html">
+                    <div class="gomb">
+                        <p>Vissza a főoldalra</p>
+                    </div>
+                </a>
+
             </div>
         </div>
         <div id="ujJatekGomb">
