--- a/jatekok/jatekok.html
+++ b/jatekok/jatekok.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+    <section id="kozos">
+        <header>
+            <h1>JÁTÉKOK</h1>
+        </header>
+        <nav>
+            
+        </nav>
+    </section>
     <section id="jatekok">
         <div class="fotarolo">
 
