--- a/tesztkerdesek/tesztkerdesek.html
+++ b/tesztkerdesek/tesztkerdesek.html
@@ -7,10 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="teszt.js"></script>
     <title>Teszt Kerdesek</title>
+
+    <style>
+        .show-answers .correct {
+            color: green;
+        }
+        
+        .show-answers .incorrect {
+            color: red;
+        }
+    </style>
 </head>
 
 <body>
-    <div id="valasztas"> 
+    <div id="valasztas">
         <button id="altsuli">Általános suli</button>
         <button id="kozsuli">Közép suli</button>
         <button id="felnot">Felnőtteknek</button>
