--- a/jatekok/memoriajatek.html
+++ b/jatekok/memoriajatek.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peti</title>
-    <script src="jscript.js"></script>
-    <link rel="stylesheet" href="stilus.css">
+    <script src="jscriptMemoriaJatek.js"></script>
+    <link rel="stylesheet" href="stilusMemoriaJatek.css">
 </head>
 
 <body>
