szelektív játék majdnem kész

--- a/jatekok/szelektivjatek.html
+++ b/jatekok/szelektivjatek.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,17 +9,40 @@
     <script src="jscriptSzelektivJatek.js"></script>
     <title>Peti</title>
 </head>
+
 <body>
     <section id="jatekok2">
-        <div class="tarolo" id="kukaTarolo">
-            <img draggable="false" src="../kepek/jatekok/feherkuka.png" alt="feherkuka">
-            <img draggable="false" src="../kepek/jatekok/sargakuka.png" alt="feherkuka">
-            <img draggable="false" src="../kepek/jatekok/zoldkuka.png" alt="feherkuka">
-            <img draggable="false" src="../kepek/jatekok/kekkuka.png" alt="feherkuka">
-        </div>
-        <div class="tarolo" id="szemetTarolo">
-            
-        </div>
+        <section id="kezdoKep">
+            <button id="jatekKezdet">Játék kezdése</button>
+        </section>
+        <section id="jatekMezo">
+            <div id="pontszamTarolo">
+                <p>pontszám:</p>
+                <p id="pontszam">
+
+                </p>
+            </div>
+            <div id="idozitoTarolo">
+                <p>idő: </p>
+                <p id="idozito">
+
+                </p>
+            </div>
+            <div class="tarolo" id="kukaTarolo">
+                <!-- <img draggable="false" src="../kepek/jatekok/feherkuka.png" alt="feherkuka">
+            <img draggable="false" src="../kepek/jatekok/sargakuka.png" alt="sargakuka">
+            <img draggable="false" src="../kepek/jatekok/zoldkuka.png" alt="zoldkuka">
+            <img draggable="false" src="../kepek/jatekok/kekkuka.png" alt="kekkuka"> -->
+            </div>
+            <div class="tarolo" id="szemetTarolo">
+
+            </div>
+            <div id="gombTarolo">
+                <button id="ujJatek">Új játék</button>
+            </div>
+        </section>
+        
     </section>
 </body>
+
 </html>
