--- a/fooldal/index.html
+++ b/fooldal/index.html
@@ -72,10 +72,10 @@
             <div>
                 <ul class="fooldal-menu">
                     <li><a href="index.html" class="fooldal-menupont">Főoldal</a></li>
-                    <li><a href="/kepgaleria/kepgaleria.html" class="fooldal-menupont">Galéria</a></li>
-                    <li><a href="/jatekok/jatekok.html" class="fooldal-menupont">Játékok</a></li>
-                    <li><a href="/cikkek/cikkek.html" class="fooldal-menupont">Cikkek</a></li>
-                    <li><a href="/tesztkerdesek/tesztkerdesek.html" class="fooldal-menupont">Teszt</a></li>
+                    <li><a href="../kepgaleria/galeria.html" class="fooldal-menupont">Galéria</a></li>
+                    <li><a href="../jatekok/memoriajatek.html" class="fooldal-menupont">Játékok</a></li>
+                    <li><a href="../cikkek/cikkek.html" class="fooldal-menupont">Cikkek</a></li>
+                    <li><a href="../tesztkerdesek/tesztkerdesek.html" class="fooldal-menupont">Teszt</a></li>
                 </ul>
             </div>
         </nav>
@@ -95,7 +95,7 @@
             <div>
 
             </div>
-            <a href="/kepgaleria/kepgaleria.html">Több...</a>
+            <a href="../kepgaleria/galeria.html">Több...</a>
         </aside>
         <footer></footer>
     </main>
