--- a/jatekok/memoriajatek.html
+++ b/jatekok/memoriajatek.html
@@ -7,9 +7,21 @@
     <title>Peti</title>
     <script src="jscriptMemoriaJatek.js"></script>
     <link rel="stylesheet" href="stilusMemoriaJatek.css">
+    <link rel="stylesheet" href="../fostilus.css">
 </head>
 
 <body>
+    <section class="kozos">
+        <nav>
+            <ul>
+                <li><a href="../fooldal/index.html">főoldal</a></li>
+                <li><a href="../cikkek/cikkek.html">cikkek</a></li>
+                <li><a href="../jatekok/memoriajatek.html">játékok</a></li>
+                <li><a href="../kepgaleria/galeria.html">galéria</a></li>
+                <li><a href="../tesztkerdesek/tesztkerdesek.html">cikkek</a></li>
+            </ul>
+        </nav>
+    </section>
     <!-- <section id="kozos">
         <header>
             <h1>JÁTÉKOK</h1>
