--- a/jatekok/szelektivjatek.html
+++ b/jatekok/szelektivjatek.html
@@ -6,11 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stilusSzelektivJatek.css">
+    <link rel="stylesheet" href="../fostilus.css">
     <script src="jscriptSzelektivJatek.js"></script>
+
     <title>Peti</title>
 </head>
 
 <body>
+    <section class="kozos">
+        <nav>
+            <ul>
+                <li><a href="../fooldal/index.html">főoldal</a></li>
+                <li><a href="../cikkek/cikkek.html">cikkek</a></li>
+                <li><a href="../jatekok/memoriajatek.html">játékok</a></li>
+                <li><a href="../kepgaleria/galeria.html">galéria</a></li>
+                <li><a href="../tesztkerdesek/tesztkerdesek.html">cikkek</a></li>
+            </ul>
+        </nav>
+    </section>
     <section id="jatekok2">
         <section id="kezdoKep">
             <button id="jatekKezdet">Játék kezdése</button>
