--- a/kepgaleria/galeria.html
+++ b/kepgaleria/galeria.html
@@ -6,9 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kovács Milán</title>
     <link rel="stylesheet" href="galeria.css">
+    <link rel="stylesheet" href="../fostilus.css">
     <script src="galeria.js"></script>
 </head>
 <body>
+    <section class="kozos">
+        <nav>
+            <ul>
+                <li><a href="../fooldal/index.html">főoldal</a></li>
+                <li><a href="../cikkek/cikkek.html">cikkek</a></li>
+                <li><a href="../jatekok/memoriajatek.html">játékok</a></li>
+                <li><a href="../kepgaleria/galeria.html">galéria</a></li>
+                <li><a href="../tesztkerdesek/tesztkerdesek.html">cikkek</a></li>
+            </ul>
+        </nav>
+    </section>
     <main>
         <header><h1>Galéria</h1></header>
         <article id="tartalom" class="container">
