--- a/tesztkerdesek/tesztkerdesek.html
+++ b/tesztkerdesek/tesztkerdesek.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="../fostilus.css">
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,6 +22,17 @@
 </head>
 
 <body>
+    <section class="kozos">
+        <nav>
+            <ul>
+                <li><a href="../fooldal/index.html">főoldal</a></li>
+                <li><a href="../cikkek/cikkek.html">cikkek</a></li>
+                <li><a href="../jatekok/memoriajatek.html">játékok</a></li>
+                <li><a href="../kepgaleria/galeria.html">galéria</a></li>
+                <li><a href="../tesztkerdesek/tesztkerdesek.html">cikkek</a></li>
+            </ul>
+        </nav>
+    </section>
     <div id="valasztas">
         <button id="altsuli">Általános suli</button>
         <button id="kozsuli">Közép suli</button>
