--- a/jatekok/szelektivjatek.html
+++ b/jatekok/szelektivjatek.html
@@ -7,13 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stilusSzelektivJatek.css">
     <script src="jscriptSzelektivJatek.js"></script>
-    <title>Peti</title>
+    <title>szelektív játék</title>
 </head>
 
 <body>
     <section id="jatekok2">
         <section id="kezdoKep">
-            <button id="jatekKezdet">Játék kezdése</button>
+            <button class="jatekGomb" id="jatekKezdet">Játék kezdése</button>
+        </section>
+        <section id="jatekVege">
+            <button class="jatekGomb" id="ujJatek2">Új játék</button>
         </section>
         <section id="jatekMezo">
             <div id="pontszamTarolo">
