időzítő, újjáték működik

--- a/jatekok/szelektivjatek.html
+++ b/jatekok/szelektivjatek.html
@@ -13,9 +13,18 @@
 <body>
     <section id="jatekok2">
         <section id="kezdoKep">
+            <p>Dobj ki minél több szemetet a megfelelő konténerbe időre! Kannints arra a konténerre, amibe dobni szeretnéd!</p>
+            <ul>
+                <li>Sárga konténer: műanyag</li>
+                <li>Kék konténer: papír</li>
+                <li>Fehér konténer: fehér üveg</li>
+                <li>Zöld konténer: színes üveg</li>
+            </ul>
             <button class="jatekGomb" id="jatekKezdet">Játék kezdése</button>
         </section>
         <section id="jatekVege">
+            <h2>Pontszám: </h2>
+            <p id="eredmeny"></p>
             <button class="jatekGomb" id="ujJatek2">Új játék</button>
         </section>
         <section id="jatekMezo">
@@ -44,7 +53,7 @@
                 <button id="ujJatek">Új játék</button>
             </div>
         </section>
-        
+
     </section>
 </body>
 
