közös header, nav

--- a/kepgaleria/galeria.html
+++ b/kepgaleria/galeria.html
@@ -17,7 +17,7 @@
                 <li><a href="../cikkek/cikkek.html">cikkek</a></li>
                 <li><a href="../jatekok/memoriajatek.html">játékok</a></li>
                 <li><a href="../kepgaleria/galeria.html">galéria</a></li>
-                <li><a href="../tesztkerdesek/tesztkerdesek.html">cikkek</a></li>
+                <li><a href="../tesztkerdesek/tesztkerdesek.html">TESZTKÉRDÉSEK</a></li>
             </ul>
         </nav>
     </section>
