--- a/cikkek/cikkek.html
+++ b/cikkek/cikkek.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    
+    <section id="kozos">
     <nav>
         <ul>
             <li><a href="../fooldal/index.html">FŐOLDAL</a></li>
@@ -22,9 +22,10 @@
             <li><a href="../tesztkerdesek/tesztkerdesek.html">CIKKEK</a></li>
         </ul>
     </nav>
-    <header>
+    <header> 
             <h1>Cikkek</h1>
     </header>
+    <div id="fotarolo">
     <article>
 
 
@@ -41,6 +42,8 @@
        
  -->
     </article>
+</section>
+</div>
 </body>
 
 </html>
