--- a/jatekok/memoriajatek.html
+++ b/jatekok/memoriajatek.html
@@ -32,19 +32,28 @@
                 <div class="gomb" id="ujjatek">
                     <p>Új játék</p>
                 </div>
-                <a href="../fooldal/index.html">
+                <a href="../jatekok/jatekok.html">
                     <div class="gomb">
                         <p>Vissza a főoldalra</p>
                     </div>
                 </a>
-
             </div>
+
         </div>
         <div id="ujJatekGomb">
             <div class="gomb2" id="ujjatek">
                 <p>Új játék</p>
             </div>
+
         </div>
+        <div id="menu">
+            <a href="jatekok.html" id="menu">
+                <div class="gomb2">
+                    <p>Vissza a főoldalra</p>
+                </div>
+            </a>
+        </div>
+            
     </section>
 
 </body>
