--- a/jatekok/szelektivjatek.html
+++ b/jatekok/szelektivjatek.html
@@ -21,6 +21,7 @@
                 <li>Zöld konténer: színes üveg</li>
             </ul>
             <button class="jatekGomb" id="jatekKezdet">Játék kezdése</button>
+            <button class="jatekGomb">Vissza a menübe</button>
         </section>
         <section id="jatekVege">
             <h2>Pontszám: </h2>
