--- a/jatekok/jatekok.html
+++ b/jatekok/jatekok.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../fostilus.css">
+    <link rel="stylesheet" href="jatekok.css">
     <title>Jatekok</title>
 </head>
+
 <body>
-    <h1>Válassz játékot!</h1>
-    <h2>Memóriajáték:</h2>
-    <p>Egy klasszikus megmóriajáték. Keresd meg a 12 ruhákat ábrázoló kártyák közül a párokat!</p>
-    <h2>Szelektív játék:</h2>
-    <p>Dobj ki minél több szemetet a megfelelő konténerbe megadott idő alatt!</p>
+    <section id="jatekoldal">
+
+
+        <h1>Válassz játékot!</h1>
+        <h2>Memóriajáték:</h2>
+        <div class="keptarolo">
+            <img src="../kepek/jatekok/memoriajatek.png" alt="jatekkep">
+
+        </div>
+        <p>Egy klasszikus megmóriajáték. Keresd meg a 12 ruhákat ábrázoló kártyák közül a párokat!</p>
+        <h2>Szelektív játék:</h2>
+        <p>Dobj ki minél több szemetet a megfelelő konténerbe megadott idő alatt!</p>
+    </section>
 </body>
+
 </html>
