hozzáadva minden oldalon

--- a/cikkek/cikkek.html
+++ b/cikkek/cikkek.html
@@ -19,12 +19,13 @@
             <li><a href="../cikkek/cikkek.html">CIKKEK</a></li>
             <li><a href="../jatekok/memoriajatek.html">JÁTÉKOK</a></li>
             <li><a href="../kepgaleria/galeria.html">GALÉRIA</a></li>
-            <li><a href="../tesztkerdesek/tesztkerdesek.html">CIKKEK</a></li>
+            <li><a href="../tesztkerdesek/tesztkerdesek.html">TESZTKÉRDÉSEK</a></li>
         </ul>
     </nav>
     <header> 
             <h1>Cikkek</h1>
     </header>
+</section>
     <div id="fotarolo">
     <article>
 
@@ -42,7 +43,7 @@
        
  -->
     </article>
-</section>
+
 </div>
 </body>
 
