--- a/jatekok/szelektivjatek.html
+++ b/jatekok/szelektivjatek.html
@@ -20,7 +20,7 @@
                 <li><a href="../cikkek/cikkek.html">cikkek</a></li>
                 <li><a href="../jatekok/memoriajatek.html">játékok</a></li>
                 <li><a href="../kepgaleria/galeria.html">galéria</a></li>
-                <li><a href="../tesztkerdesek/tesztkerdesek.html">cikkek</a></li>
+                <li><a href="../tesztkerdesek/tesztkerdesek.html">tesztkérdések</a></li>
             </ul>
         </nav>
     </section>
