--- a/tesztkerdesek/tesztkerdesek.html
+++ b/tesztkerdesek/tesztkerdesek.html
@@ -22,16 +22,19 @@
 </head>
 
 <body>
-    <section class="kozos">
+    <section id="kozos">
         <nav>
             <ul>
-                <li><a href="../fooldal/index.html">főoldal</a></li>
-                <li><a href="../cikkek/cikkek.html">cikkek</a></li>
-                <li><a href="../jatekok/memoriajatek.html">játékok</a></li>
-                <li><a href="../kepgaleria/galeria.html">galéria</a></li>
+                <li><a href="../fooldal/index.html">FŐOLDAL</a></li>
+                <li><a href="../cikkek/cikkek.html">CIKKEK</a></li>
+                <li><a href="../jatekok/jatekok.html">JÁTÉKOK</a></li>
+                <li><a href="../kepgaleria/galeria.html">GALÉRIA</a></li>
                 <li><a href="../tesztkerdesek/tesztkerdesek.html">TESZTKÉRDÉSEK</a></li>
             </ul>
         </nav>
+        <header> 
+                <h1>Tesztkérdések</h1>
+        </header>
     </section>
     <div id="valasztas">
         <button id="altsuli">Általános suli</button>
