--- a/kepgaleria/galeria.html
+++ b/kepgaleria/galeria.html
@@ -10,16 +10,19 @@
     <script src="galeria.js"></script>
 </head>
 <body>
-    <section class="kozos">
+    <section id="kozos">
         <nav>
             <ul>
-                <li><a href="../fooldal/index.html">főoldal</a></li>
-                <li><a href="../cikkek/cikkek.html">cikkek</a></li>
-                <li><a href="../jatekok/memoriajatek.html">játékok</a></li>
-                <li><a href="../kepgaleria/galeria.html">galéria</a></li>
+                <li><a href="../fooldal/index.html">FŐOLDAL</a></li>
+                <li><a href="../cikkek/cikkek.html">CIKKEK</a></li>
+                <li><a href="../jatekok/memoriajatek.html">JÁTÉKOK</a></li>
+                <li><a href="../kepgaleria/galeria.html">GALÉRIA</a></li>
                 <li><a href="../tesztkerdesek/tesztkerdesek.html">TESZTKÉRDÉSEK</a></li>
             </ul>
         </nav>
+        <header> 
+                <h1>Galéria</h1>
+        </header>
     </section>
     <main>
         <header><h1>Galéria</h1></header>
