--- a/fooldal/index.html
+++ b/fooldal/index.html
@@ -4,15 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="jscript.js"></script>
+    <link rel="stylesheet" href="../fostilus.css">
     <link rel="stylesheet" href="stilus.css">
     <title>Családi Alexandra</title>
 </head>
 <body>
     <section id="fooldal">
-    <main class="fooldal-m">
-        <header class="fooldal-h">
-
-            <!--image slider start-->
+    <main>
+        <header>
+            <img src="kepek/iras3.jpeg" alt="" width="800px">
+        </header>
+        <section class="kozos">
+            <nav>
+                <ul>
+                    <li><a href="../fooldal/index.html">főoldal</a></li>
+                    <li><a href="../cikkek/cikkek.html">cikkek</a></li>
+                    <li><a href="../jatekok/memoriajatek.html">játékok</a></li>
+                    <li><a href="../kepgaleria/galeria.html">galéria</a></li>
+                    <li><a href="../tesztkerdesek/tesztkerdesek.html">cikkek</a></li>
+                </ul>
+            </nav>
+        </section>
+        <article class="fooldal-article" >
+            <h1 class="fooldal-szov">Cikkeink</h1>
+            <p class="fooldal-szov">A <em>Tovább</em> gombra kattintva tudod elolvasni diákjaink cikkeit.</p>
+            <div>
+                <img src="kepek/iras2.jpeg" alt="" width="800px">
+            </div>
+            <a href="../cikkek/cikkek.html">Tovább...</a>
+        </article>
+        <aside class="fooldal-aside">
+            <h1 class="fooldal-szov">Képgaléria</h1>
+            <p class="fooldal-szov">A <em>Több</em> gombra kattintva tudod megnézni a profi fotósaink képeit.</p>
+            <div>
+                <!--image slider start-->
             <div class="slider">
                 <div class="slides">
 
@@ -67,35 +92,8 @@
                     }
                 }, 5000);
             </script>-->
-        </header>
-        <nav class="fooldal-navigation">
-            <div>
-                <ul class="fooldal-menu">
-                    <li><a href="index.html" class="fooldal-menupont">Főoldal</a></li>
-                    <li><a href="/kepgaleria/kepgaleria.html" class="fooldal-menupont">Galéria</a></li>
-                    <li><a href="/jatekok/jatekok.html" class="fooldal-menupont">Játékok</a></li>
-                    <li><a href="/cikkek/cikkek.html" class="fooldal-menupont">Cikkek</a></li>
-                    <li><a href="/tesztkerdesek/tesztkerdesek.html" class="fooldal-menupont">Teszt</a></li>
-                </ul>
             </div>
-        </nav>
-        <article class="fooldal-article" >
-            <h1 class="fooldal-szov">
-                Cikkeink:
-            </h1>
-            <div>
-                
-            </div>
-            <a href="/cikkek/cikkek.html">Tovább...</a>
-        </article>
-        <aside class="fooldal-aside">
-            <h1 class="fooldal-szov">
-                Képgaléria
-            </h1>
-            <div>
-
-            </div>
-            <a href="/kepgaleria/kepgaleria.html">Több...</a>
+            <a href="../kepgaleria/kepgaleria.html">Több...</a>
         </aside>
         <footer></footer>
     </main>
