játékok oldal beállítva

--- a/cikkek/cikkek.html
+++ b/cikkek/cikkek.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="../fooldal/index.html">FŐOLDAL</a></li>
             <li><a href="../cikkek/cikkek.html">CIKKEK</a></li>
-            <li><a href="../jatekok/memoriajatek.html">JÁTÉKOK</a></li>
+            <li><a href="../jatekok/jatekok.html">JÁTÉKOK</a></li>
             <li><a href="../kepgaleria/galeria.html">GALÉRIA</a></li>
             <li><a href="../tesztkerdesek/tesztkerdesek.html">TESZTKÉRDÉSEK</a></li>
         </ul>
