--- a/jatekok/jatekok.html
+++ b/jatekok/jatekok.html
@@ -10,6 +10,20 @@
 </head>
 
 <body>
+    <section id="kozos">
+        <nav>
+            <ul>
+                <li><a href="../fooldal/index.html">FŐOLDAL</a></li>
+                <li><a href="../cikkek/cikkek.html">CIKKEK</a></li>
+                <li><a href="../jatekok/jatekok.html">JÁTÉKOK</a></li>
+                <li><a href="../kepgaleria/galeria.html">GALÉRIA</a></li>
+                <li><a href="../tesztkerdesek/tesztkerdesek.html">TESZTKÉRDÉSEK</a></li>
+            </ul>
+        </nav>
+        <header> 
+                <h1>Cikkek</h1>
+        </header>
+    </section>
     <section id="jatekoldal">
 
 
