--- a/fooldal/index.html
+++ b/fooldal/index.html
@@ -12,24 +12,27 @@
     <section id="fooldal">
     <main>
         <header>
-            <img src="kepek/iras3.jpeg" alt="" width="800px">
         </header>
-        <section class="kozos">
+        <section id="kozos">
             <nav>
                 <ul>
-                    <li><a href="../fooldal/index.html">főoldal</a></li>
-                    <li><a href="../cikkek/cikkek.html">cikkek</a></li>
-                    <li><a href="../jatekok/memoriajatek.html">játékok</a></li>
-                    <li><a href="../kepgaleria/galeria.html">galéria</a></li>
-                    <li><a href="../tesztkerdesek/tesztkerdesek.html">cikkek</a></li>
+                    <li><a href="../fooldal/index.html">FŐOLDAL</a></li>
+                    <li><a href="../cikkek/cikkek.html">CIKKEK</a></li>
+                    <li><a href="../jatekok/jatekok.html">JÁTÉKOK</a></li>
+                    <li><a href="../kepgaleria/galeria.html">GALÉRIA</a></li>
+                    <li><a href="../tesztkerdesek/tesztkerdesek.html">TESZTKÉRDÉSEK</a></li>
                 </ul>
             </nav>
-        </section>
+            <header> 
+                    <h1>Cikkek</h1>
+            </header>
+        
+
         <article class="fooldal-article" >
-            <h1 class="fooldal-szov">Cikkeink</h1>
-            <p class="fooldal-szov">A <em>Tovább</em> gombra kattintva tudod elolvasni diákjaink cikkeit.</p>
+            <h1>Cikkeink</h1>
+            <p>A <em>Tovább</em> gombra kattintva tudod elolvasni diákjaink cikkeit.</p>
             <div>
-                <img src="kepek/iras2.jpeg" alt="" width="800px">
+                <img src="kepek/iras3.jpeg" alt="" width="800px">
             </div>
             <a href="../cikkek/cikkek.html">Tovább...</a>
         </article>
@@ -97,6 +100,7 @@
         </aside>
         <footer></footer>
     </main>
+</section>
 </section>
 </body>
 </html>
