--- a/fooldal/index.html
+++ b/fooldal/index.html
@@ -9,10 +9,8 @@
     <title>Családi Alexandra</title>
 </head>
 <body>
-    <section id="fooldal">
+    
     <main>
-        <header>
-        </header>
         <section id="kozos">
             <nav>
                 <ul>
@@ -22,8 +20,12 @@
                     <li><a href="../kepgaleria/galeria.html">GALÉRIA</a></li>
                     <li><a href="../tesztkerdesek/tesztkerdesek.html">TESZTKÉRDÉSEK</a></li>
                 </ul>
-            </nav>       
-
+            </nav>
+            <header>
+                <h1>Főoldal</h1>
+            </header>
+        </section>
+        <section id="fooldal"></section>
         <article class="fooldal-article" >
             <h1>Cikkeink</h1>
             <p>A <em>Tovább</em> gombra kattintva tudod elolvasni diákjaink cikkeit.</p>
@@ -96,7 +98,7 @@
         </aside>
         <footer></footer>
     </main>
-</section>
+
 </section>
 </body>
 </html>
