--- a/fooldal/index.html
+++ b/fooldal/index.html
@@ -25,7 +25,7 @@
                 <h1>Főoldal</h1>
             </header>
         </section>
-        <section id="fooldal"></section>
+        <section id="fooldal">
         <article class="fooldal-article" >
             <h1>Cikkeink</h1>
             <p>A <em>Tovább</em> gombra kattintva tudod elolvasni diákjaink cikkeit.</p>
@@ -97,8 +97,8 @@
             <a href="../kepgaleria/kepgaleria.html">Több...</a>
         </aside>
         <footer></footer>
+    </section>
     </main>
 
-</section>
 </body>
 </html>
