--- a/fooldal/index.html
+++ b/fooldal/index.html
@@ -9,10 +9,8 @@
     <title>Családi Alexandra</title>
 </head>
 <body>
-    <section id="fooldal">
+    
     <main>
-        <header>
-        </header>
         <section id="kozos">
             <nav>
                 <ul>
@@ -22,81 +20,49 @@
                     <li><a href="../kepgaleria/galeria.html">GALÉRIA</a></li>
                     <li><a href="../tesztkerdesek/tesztkerdesek.html">TESZTKÉRDÉSEK</a></li>
                 </ul>
-            </nav>       
+            </nav>
+            <header>
+                <h1>Főoldal</h1>
+            </header>
+        </section>
+        <section id="fooldal">
 
+            <img class="szamalk" src="kepek/szamalk-logo.png" alt="Számalk-Szalézi" width="500">
+            <div class="fooldal-udvozlo">
+                <h1>Kedves Látogató!</h1>
+                <p>Itt tekintheted meg a 2021/23 évi elsőéves Fotógráfus és Divat-, jelmez- és díszlettervező szakra járó diákjaink munkáit. Ezek a munkák a Fenntarthatósági hét keretében készültek. 
+                    Ezt az oldalt a 2021/23 első éves Szoftverfejlesztő és -tesztelő elsőéves diákjaink készítették, 
+                    hogy könnyeben átböngészhesd és kedvedre válogass a munkák közül. 
+                    <br>
+                    <em>Ne hagyd ki a <a href="../jatekok/jatekok.html">játékokat</a> és <a href="../tesztkerdesek/tesztkerdesek.html">tesztkérdéseket</a> se!</em>
+                </p>
+            </div>
         <article class="fooldal-article" >
-            <h1>Cikkeink</h1>
+
+            <div>
+                <h2>Cikkeink</h2>
             <p>A <em>Tovább</em> gombra kattintva tudod elolvasni diákjaink cikkeit.</p>
-            <div>
-                <img src="kepek/iras3.jpeg" alt="" width="800px">
-            </div>
+                <img src="kepek/iras4.jpeg" alt="">
+                <br>
             <a href="../cikkek/cikkek.html">Tovább...</a>
-        </article>
-        <aside class="fooldal-aside">
-            <h1 class="fooldal-szov">Képgaléria</h1>
-            <p class="fooldal-szov">A <em>Több</em> gombra kattintva tudod megnézni a profi fotósaink képeit.</p>
+            </div>
+
             <div>
-                <!--image slider start-->
-            <div class="slider">
-                <div class="slides">
-
-                    <!--radio buttons start-->
-                    <input type="radio" name="radio-btn" id="radio1">
-                    <input type="radio" name="radio-btn" id="radio2">
-                    <input type="radio" name="radio-btn" id="radio3">
-                    <input type="radio" name="radio-btn" id="radio4">
-                    <!--radio buttons end-->
-
-                    <!--slide images start-->
-                    <div class="slide first">
-                        <img src="kepek/1.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="kepek/2.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="kepek/3.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="kepek/4.jpg" alt="">
-                    </div>
-                    <!--slide images end-->
-                    <!--automatic navigation starts-->
-                    <div class="navigation-auto">
-                        <div class="auto-btn1"></div>
-                        <div class="auto-btn2"></div>
-                        <div class="auto-btn3"></div>
-                        <div class="auto-btn4"></div>
-                    </div>
-                    <!--automatic navigation ends-->
-                </div>
-                <!--manual navigation starts-->
-                <div class="navigation-manual">
-                    <label for="radio1" class="manual-btn"></label>
-                    <label for="radio2" class="manual-btn"></label>
-                    <label for="radio3" class="manual-btn"></label>
-                    <label for="radio4" class="manual-btn"></label>
-                </div>
-                <!--manual navigation ends-->
+                <h2 class="fooldal-szov">Képgaléria</h2>
+                <p class="fooldal-szov">A <em>Több</em> gombra kattintva tudod megnézni diákjaink képeit.</p>
+                <img src="kepek/iras3.jpeg" alt="">
+                <br>
+                <a href="../kepgaleria/kepgaleria.html">Több...</a>
             </div>
-            <!--image slider end-->
-            <!-- Átraktam jsbe
-            <script type="text/javascript">
-                var counter = 1;
-                setInterval(function(){
-                    document.getElementById('radio' + counter).checked = true;
-                    counter++;
-                    if(counter >4){
-                        counter = 1;
-                    }
-                }, 5000);
-            </script>-->
-            </div>
-            <a href="../kepgaleria/kepgaleria.html">Több...</a>
+        </article>
+
+        <aside class="fooldal-aside">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/UiAJdP9KeIs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </aside>
-        <footer></footer>
+        
+        <footer>@Minden jog fentartva. BP, KM, MZSL, KD, CSA</footer>
+    </section>
     </main>
-</section>
-</section>
+
 </body>
 </html>
