--- a/jatekok/jatekok.html
+++ b/jatekok/jatekok.html
@@ -12,16 +12,16 @@
 <body>
     <section id="jatekoldal">
 
+        <div id="fotarolo">
+            <h1>Válassz játékot!</h1>
+            <h2>Memóriajáték:</h2>
+            <p>Egy klasszikus megmóriajáték. Keresd meg a 12 ruhákat ábrázoló kártyák közül a párokat!</p>
+                <a href="memoriajatek.html">Játék</a>
 
-        <h1>Válassz játékot!</h1>
-        <h2>Memóriajáték:</h2>
-        <div class="keptarolo">
-            <img src="../kepek/jatekok/memoriajatek.png" alt="jatekkep">
-
+            <h2>Szelektív játék:</h2>
+            <p>Dobj ki minél több szemetet a megfelelő konténerbe megadott idő alatt!</p>
+            <a href="szelektivjatek.html">Játék</a>
         </div>
-        <p>Egy klasszikus megmóriajáték. Keresd meg a 12 ruhákat ábrázoló kártyák közül a párokat!</p>
-        <h2>Szelektív játék:</h2>
-        <p>Dobj ki minél több szemetet a megfelelő konténerbe megadott idő alatt!</p>
     </section>
 </body>
 
