--- a/jatekok/szelektivjatek.html
+++ b/jatekok/szelektivjatek.html
@@ -50,9 +50,13 @@
             <div class="tarolo" id="szemetTarolo">
 
             </div>
-            <div id="gombTarolo">
-                <button id="ujJatek">Új játék</button>
-            </div>
+            <!-- <div id="gombTarolo">
+                <p id="ujJatek" class="gomb">Új játék</p>
+            </div> -->
+                <a href="jatekok.html">
+                    <div class="gomb">Vissza</div>
+                </a>
+          
         </section>
 
     </section>
