--- a/fooldal/index.html
+++ b/fooldal/index.html
@@ -45,7 +45,7 @@
 
             <article class="fooldal-article">
 
-                <div>
+                <div class="article-tarolo">
                     <h2>Cikkeink</h2>
                     <p>A <em>Tovább</em> gombra kattintva tudod elolvasni diákjaink cikkeit.</p>
                     <img src="kepek/iras4.jpeg" alt="">
@@ -53,10 +53,10 @@
                     <a href="../cikkek/cikkek.html">Tovább...</a>
                 </div>
 
-                <div>
+                <div class="article-tarolo">
                     <h2 class="fooldal-szov">Képgaléria</h2>
                     <p class="fooldal-szov">A <em>Több</em> gombra kattintva tudod megnézni diákjaink képeit.</p>
-                    <img src="kepek/iras3.jpeg" alt="">
+                    <img src="kepek/3.jpg" alt="">
                     <br>
                     <a href="../kepgaleria/kepgaleria.html">Több...</a>
                 </div>
