--- a/tesztkerdesek/tesztkerdesek.html
+++ b/tesztkerdesek/tesztkerdesek.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="../fostilus.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,6 +21,20 @@
 </head>
 
 <body>
+    <section id="kozos">
+        <nav>
+            <ul>
+                <li><a href="../fooldal/index.html">FŐOLDAL</a></li>
+                <li><a href="../cikkek/cikkek.html">CIKKEK</a></li>
+                <li><a href="../jatekok/jatekok.html">JÁTÉKOK</a></li>
+                <li><a href="../kepgaleria/galeria.html">GALÉRIA</a></li>
+                <li><a href="../tesztkerdesek/tesztkerdesek.html">TESZTKÉRDÉSEK</a></li>
+            </ul>
+        </nav>
+        <header>
+            <h1>Tesztkérdések</h1>
+        </header>
+    </section>
     <div id="valasztas">
         <button id="altsuli">Általános suli</button>
         <button id="kozsuli">Közép suli</button>
