--- a/jatekok/memoriajatek.html
+++ b/jatekok/memoriajatek.html
@@ -41,15 +41,15 @@
 
         </div>
         <div id="ujJatekGomb">
-            <div class="gomb2" id="ujjatek">
-                <p>Új játék</p>
+            <div>
+                <p class="gomb2" id="ujjatek">Új játék</p>
             </div>
 
         </div>
-        <div id="menu">
-            <a href="jatekok.html" id="menu">
-                <div class="gomb2">
-                    <p>Vissza a főoldalra</p>
+        <div>
+            <a href="jatekok.html" >
+                <div>
+                    <p class="gomb2" id="menu">Vissza</p>
                 </div>
             </a>
         </div>
