cikk header megoldva

--- a/cikkek/cikkek.html
+++ b/cikkek/cikkek.html
@@ -28,6 +28,7 @@
             <h1>Cikkek</h1>
         </header>
     </section>
+    <section id="cikkek">
     <main>
     <article>
 
@@ -64,7 +65,7 @@
         </ul>
     </article>
     </main>
-   
+</section>
 </body>
 
 </html>
