--- a/tesztkerdesek/tesztkerdesek.html
+++ b/tesztkerdesek/tesztkerdesek.html
@@ -3,12 +3,12 @@
 
 <head>
     <link rel="stylesheet" href="../fostilus.css">
-    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stilus.css">
     <script src="teszt.js"></script>
-    <title>Teszt Kerdesek</title>
+    <title>Tesztkérdések</title>
 
     <style>
         .show-answers .correct {
@@ -32,17 +32,21 @@
                 <li><a href="../tesztkerdesek/tesztkerdesek.html">TESZTKÉRDÉSEK</a></li>
             </ul>
         </nav>
-        <header> 
-                <h1>Tesztkérdések</h1>
+        <header>
+            <h1>Tesztkérdések</h1>
         </header>
     </section>
+    <section id="tesztkerdesek">
+
+    
     <div id="valasztas">
-        <button id="altsuli">Általános suli</button>
-        <button id="kozsuli">Közép suli</button>
-        <button id="felnot">Felnőtteknek</button>
+        <button id="altsuli" class="gomb">Általános suli</button>
+        <button id="kozsuli" class="gomb">Középsuli</button>
+        <button id="felnot" class="gomb">Felnőtteknek</button>
     </div>
     <section id="tesztes">
     </section>
+</section>
 </body>
 
 </html>
