galéria link javítva

--- a/fooldal/index.html
+++ b/fooldal/index.html
@@ -55,10 +55,10 @@
 
                 <div class="article-tarolo">
                     <h2 class="fooldal-szov">Képgaléria</h2>
-                    <p class="fooldal-szov">A <em>Több</em> gombra kattintva tudod megnézni diákjaink képeit.</p>
+                    <p class="fooldal-szov">A <em>Tovább</em> gombra kattintva tudod megnézni diákjaink képeit.</p>
                     <img src="kepek/3.jpg" alt="">
                     <br>
-                    <a href="../kepgaleria/kepgaleria.html">Több...</a>
+                    <a href="../kepgaleria/galeria.html">Tovább...</a>
                 </div>
             </article>
 
