kisképek nem működik

--- a/kepgaleria/galeria.html
+++ b/kepgaleria/galeria.html
@@ -14,18 +14,9 @@
         <article id="tartalom" class="container">
             <div class="gomb"><button id="balra">&#10094;</button></div>
             <div class="kepek" id="valtoz"><img id="kivalasztott" src="" alt=""></div>
-            <div class="column">
-                <div class="row">
-                  <img src="../kepek/galeria/kep33.jpg" class="hover-shadow cursor">
-                </div>
-                <div class="row">
-                  <img src="../kepek/galeria/kep33.jpg" class="hover-shadow cursor">
-                </div>
-                <div class="row">
-                  <img src="../kepek/galeria/kep33.jpg" class="hover-shadow cursor">
-                </div>
+            <!--<div class="column">
                 
-              </div>
+            </div>-->
             <div class="gomb"><button id="jobbra">&#10095;</button></div>
         </article>
         <section id="inp" class="container">
