normális title nevek

--- a/fooldal/index.html
+++ b/fooldal/index.html
@@ -7,7 +7,7 @@
     <script src="jscript.js"></script>
     <link rel="stylesheet" href="../fostilus.css">
     <link rel="stylesheet" href="stilus.css">
-    <title>Családi Alexandra</title>
+    <title>Főoldal</title>
 </head>
 
 <body>
