--- a/jatekok/szelektivjatek.html
+++ b/jatekok/szelektivjatek.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../fostilus.css">
     <script src="jscriptSzelektivJatek.js"></script>
 
-    <title>szelektív játék</title>
+    <title>Szelektív játék</title>
 
 </head>
 
