--- a/jatekok/memoriajatek.html
+++ b/jatekok/memoriajatek.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peti</title>
+    <title>Memóriajáték</title>
     <script src="jscriptMemoriaJatek.js"></script>
     <link rel="stylesheet" href="stilusMemoriaJatek.css">
     <link rel="stylesheet" href="../fostilus.css">
