--- a/kepgaleria/galeria.html
+++ b/kepgaleria/galeria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kovács Milán</title>
+    <title>Képgaléria</title>
     <link rel="stylesheet" href="../fostilus.css">
     <link rel="stylesheet" href="galeria.css">
     <script src="galeria.js"></script>
