--- a/cikkek/cikkek.html
+++ b/cikkek/cikkek.html
@@ -9,6 +9,7 @@
     <title>Cikkek</title>
     <link rel="stylesheet" href="cikkek.css">
     <script src="cikkek.js"></script>
+    <link rel="icon" type="image/x-icon" href="../kepek/kozos/favicon-32x32.png">
 
 </head>
 
