--- a/jatekok/memoriajatek.html
+++ b/jatekok/memoriajatek.html
@@ -8,6 +8,7 @@
     <script src="jscriptMemoriaJatek.js"></script>
     <link rel="stylesheet" href="stilusMemoriaJatek.css">
     <link rel="stylesheet" href="../fostilus.css">
+    <link rel="icon" type="image/x-icon" href="../kepek/kozos/favicon-32x32.png">
 </head>
 
 <body>
