--- a/jatekok/szelektivjatek.html
+++ b/jatekok/szelektivjatek.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stilusSzelektivJatek.css">
     <link rel="stylesheet" href="../fostilus.css">
     <script src="jscriptSzelektivJatek.js"></script>
+    <link rel="icon" type="image/x-icon" href="../kepek/kozos/favicon-32x32.png">
 
     <title>Szelektív játék</title>
 
