--- a/tesztkerdesek/tesztkerdesek.html
+++ b/tesztkerdesek/tesztkerdesek.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stilus.css">
     <script src="teszt.js"></script>
+    <link rel="icon" type="image/x-icon" href="../kepek/kozos/favicon-32x32.png">
     <title>Tesztkérdések</title>
 
     <style>
