--- a/fooldal/index.html
+++ b/fooldal/index.html
@@ -7,6 +7,7 @@
     <script src="jscript.js"></script>
     <link rel="stylesheet" href="../fostilus.css">
     <link rel="stylesheet" href="stilus.css">
+    <link rel="icon" type="image/x-icon" href="../kepek/kozos/favicon-32x32.png">
     <title>Főoldal</title>
 </head>
 
