--- a/jatekok/jatekok.html
+++ b/jatekok/jatekok.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../fostilus.css">
     <link rel="stylesheet" href="jatekok.css">
+    <link rel="icon" type="image/x-icon" href="../kepek/kozos/favicon-32x32.png">
     <title>Jatekok</title>
 </head>
 
