--- a/kepgaleria/galeria.html
+++ b/kepgaleria/galeria.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../fostilus.css">
     <link rel="stylesheet" href="galeria.css">
     <script src="galeria.js"></script>
+    <link rel="icon" type="image/x-icon" href="../kepek/kozos/favicon-32x32.png">
 </head>
 <body>
     <section id="kozos">
