--- a/jatekok/memoriajatek.html
+++ b/jatekok/memoriajatek.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memóriajáték</title>
-    <script src="jscriptMemoriaJatek.js"></script>
+    <script src="jscriptek/alapFuncionok.js"></script>
+    <script src="jscriptek/jscriptMemoriaJatek.js"></script>
     <link rel="stylesheet" href="stilusMemoriaJatek.css">
     <link rel="stylesheet" href="../fostilus.css">
     <link rel="icon" type="image/x-icon" href="../kepek/kozos/favicon-32x32.png">
