--- a/jatekok/szelektivjatek.html
+++ b/jatekok/szelektivjatek.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stilusSzelektivJatek.css">
     <link rel="stylesheet" href="../fostilus.css">
-    <script src="jscriptSzelektivJatek.js"></script>
+    <script src="jscriptek/alapFuncionok.js"></script>
+    <script src="jscriptek/jscriptSzelektivJatek.js"></script>
     <link rel="icon" type="image/x-icon" href="../kepek/kozos/favicon-32x32.png">
 
     <title>Szelektív játék</title>
