--- a/tesztkerdesek/tesztkerdesek.html
+++ b/tesztkerdesek/tesztkerdesek.html
@@ -41,9 +41,9 @@
 
     
     <div id="valasztas">
-        <button id="altsuli" class="gomb">Általános suli</button>
-        <button id="kozsuli" class="gomb">Középsuli</button>
-        <button id="felnot" class="gomb">Felnőtteknek</button>
+        <button id="ALTSULI" class="gomb">Általános suli</button>
+        <button id="KOZSULI" class="gomb">Középsuli</button>
+        <button id="FELNOT" class="gomb">Felnőtteknek</button>
     </div>
     <section id="tesztes">
     </section>
